Solved wallpaper-header-info not showing

--- a/app/styles/createdSnap.css
+++ b/app/styles/createdSnap.css
@@ -161,7 +161,7 @@
     align-items: center;
 }
 
-.wallpaper-info {
+.create-wallpaper-info {
     display: flex;
     gap: 0.75rem;
     align-items: center;
